--- a/.env.default
+++ b/.env.default
@@ -10,8 +10,8 @@ MONGODB_HOST_TEST = host
 MONGODB_PORT_TEST = port
 MONGODB_DBNAME_TEST = test
 
-MONGODB_HOST_PROD = hostProd
-MONGODB_PORT_PROD = 27017
-MONGODB_DBNAME_PROD = prod
+MONGODB_USER_PROD = hostProd
+MONGODB_PWD_PROD = 27017
+MONGODB_SERVER_PROD = prod
 
 JWT_SECRET = yourSecret
